--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
 </head>
 <body>
-    
+    <!-- Svitto Marina start -->
+    <!-- svitto Marina end -->
 </body>
 </html>
