--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
 </head>
 <body>
+    <!-- Halyna Prolubshchykova start -->
+    <!-- Halyna Prolubshchykova end -->
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
 </body>
 </html>
