--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <!-- Halyna Prolubshchykova start -->
+    <header></header>
     <!-- Halyna Prolubshchykova end -->
     
     <!-- Svitto Marina start -->
