--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <header></header>
     <!-- Halyna Prolubshchykova end -->
     
+    <main></main>
+    <footer></footer>
     <!-- Svitto Marina start -->
     <!-- svitto Marina end -->
 
