--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     <header></header>
     <!-- Halyna Prolubshchykova end -->
     
-    <main></main>
+    <main>
+        <!-- Svitto Marina start -->
+        <!-- Svitto Marina end -->
+    </main>
     <footer></footer>
-    <!-- Svitto Marina start -->
-    <!-- svitto Marina end -->
+
 
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
 </body>
