--- a/about.html
+++ b/about.html
@@ -11,7 +11,10 @@
     <header>
 <p> Test <p>
 </header>
-    <main></main>
+    <main>
+        <!-- Svitto Marina start -->
+        <!-- Svitto Marina end -->
+    </main>
     <footer></footer>
      <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
 </body>
