--- a/policies.html
+++ b/policies.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <header></header>
-    <main></main>
+    <main>
+        <!-- Svitto Marina start -->
+        <!-- Svitto Marina end -->
+    </main>
     <footer></footer>
      <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
 </body>
