--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- Halyna Prolubshchykova end -->
     
     <main>
+        <!-- Oleksandr Papazov -->
     </main>
     <footer></footer>
 
