--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 </head>
 <body>
     <!-- Halyna Prolubshchykova start -->
-    <header></header>
+    <header data-include="partials/header.partial.html"></header>
     <!-- Halyna Prolubshchykova end -->
+    <main>
+        <!-- Halyna Prolubshchykova start -->
+        <section data-include="partials/call-form.partial.html"></section>
+        <!-- Halyna Prolubshchykova end -->
+    </main>
     
-    <!-- Svitto Marina start -->
-    <!-- svitto Marina end -->
 
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
 </body>
