--- a/gallery.html
+++ b/gallery.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <header></header>
-    <main></main>
+    <main>
+        <div></div>
+        <div>
+            <!-- Mykolyshyn -->
+        </div>
+    </main>
     <footer></footer>
      <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
 </body>
