--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,14 @@
 </head>
 <body>
     <header></header>
-    <main></main>
+    <main>
+        <div>
+            <!-- -->
+        </div>
+        <div>
+            <!--mykolyshyn -->
+        </div>
+    </main>
     <footer></footer>
      <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
 </body>
