--- a/gallery.html
+++ b/gallery.html
@@ -7,13 +7,17 @@
     <title>Document</title>
     <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
 </head>
-<body>
-    <header></header>
-    <main>
-        <div></div>
-        <div>
+<body>            
+        <header data-include="partials/header.partial.html">
+            <!-- Halyna Prolubshchykova start -->
+        </header>
+     <main>
+        <section>
+            <!--  -->
+        </section>
+        <section>
             <!-- Mykolyshyn -->
-        </div>
+        </section>
     </main>
     <footer></footer>
      <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
