--- a/about.html
+++ b/about.html
@@ -8,9 +8,9 @@
     <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
 </head>
 <body>
-    <header>
-<p> Test <p>
-</header>
+    <header data-include="partials/header.partial.html">
+            <!-- Halyna Prolubshchykova start -->
+    </header>
     <main>
         <!-- Svitto Marina start -->
         <!-- Svitto Marina end -->
