--- a/contact.html
+++ b/contact.html
@@ -8,14 +8,16 @@
     <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
 </head>
 <body>
-    <header></header>
+     <header data-include="partials/header.partial.html">
+            <!-- Halyna Prolubshchykova start -->
+     </header>
     <main>
-        <div>
+        <section>
             <!-- -->
-        </div>
-        <div>
+        </section>
+        <section>
             <!--mykolyshyn -->
-        </div>
+        </section>
     </main>
     <footer></footer>
      <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
