--- a/offer.html
+++ b/offer.html
@@ -8,7 +8,10 @@
     <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
 </head>
 <body>
-    <header></header>
+    <header data-include="partials/header.partial.html">
+        <!-- Halyna Prolubshchykova end -->
+    </header>
+    
     <main></main>
     <footer></footer>
      <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
