add 2 partials and modified index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
         <!-- Halyna Prolubshchykova end -->
     
         <!-- Oleksandr Papazov -->
+        <section data-include="partials/index.adventure.partial.html"></section>
+        <!-- Oleksandr Papazov -->
+
+        
+        <!-- Oleksandr Papazov -->
+        <section data-include="partials/index.answer-for-question.partial.html"></section>
+        <!-- Oleksandr Papazov -->
+
+
+
         <div>
             <h2>Make a reservation</h2>
             <p>Please complete the form below</p>
