--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
         <section>
             <!-- -->
         </section>
-        <section>
+        <section data-include="partials/contact-main-contact-us.html">
             <!--mykolyshyn -->
         </section>
     </main>
