--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,7 @@
         <section>
             <!--  -->
         </section>
-        <section>
+        <section data-include="partials/gallery-main-our-guests.html">
             <!-- Mykolyshyn -->
         </section>
     </main>
