--- a/about.html
+++ b/about.html
@@ -12,6 +12,9 @@
             <!-- Halyna Prolubshchykova start -->
     </header>
     <main>
+        <!-- Pivniuk Olha start -->
+        <!-- Pivniuk Olha end -->
+        
         <!-- Svitto Marina start -->
         <!-- Svitto Marina end -->
     </main>
