Update index_added partials Pivniuk.html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <section data-include="partials/index.adventure.partial.html"></section>
         <!-- Oleksandr Papazov -->
 
+        <!-- Olha Pivniuk -->
+        <section data-include="partials/index.things-to-do.partial.html"></section>
+        <!-- Olha Pivniuk -->
         
         <!-- Oleksandr Papazov -->
         <section data-include="partials/index.answer-for-question.partial.html"></section>
