added footer to all pages, added new section in index.html

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
             <!--mykolyshyn -->
         </section>
     </main>
-    <footer></footer>
+    <footer data-include="partials/footer.html"></footer>
      <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
 </body>
 </html>
