--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         <section data-include="partials/index.adventure.partial.html"></section>
         <!-- Oleksandr Papazov -->
 
+        <!-- Oleksandr Savchenko -->
+        <section data-include="partials/cabin-rental.partial.html"></section>
+        <!-- Oleksandr Savchenko -->
+
         <!-- Olha Pivniuk -->
         <section data-include="partials/index.things-to-do.partial.html"></section>
         <!-- Olha Pivniuk -->
@@ -37,9 +41,7 @@
         </div>
         
     </main>
-    <footer data-include="partials/footer.html">
-        
-    </footer>
+    <footer data-include="partials/footer.html"></footer>
 
 
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
