--- a/offer.html
+++ b/offer.html
@@ -13,7 +13,7 @@
     </header>
     
     <main></main>
-    <footer></footer>
+    <footer data-include="partials/footer.html"></footer>
      <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
 </body>
 </html>
