--- a/policies.html
+++ b/policies.html
@@ -15,7 +15,7 @@
         <!-- Svitto Marina start -->
         <!-- Svitto Marina end -->
     </main>
-    <footer></footer>
+    <footer data-include="partials/footer.html"></footer>
      <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
 </body>
 </html>
