--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
         </header>
      <main>
         <section>
-            <!--  -->
+            <!-- Savinskyi -->
         </section>
         <section data-include="partials/gallery-main-our-guests.html">
             <!-- Mykolyshyn -->
