--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
             <!-- Halyna Prolubshchykova start -->
         </header>
      <main>
-        <section>
+        <section data-include="partials/gallery-main-seasons.partial.html">
             <!-- Savinskyi -->
         </section>
         <section data-include="partials/gallery-main-our-guests.html">
