fixed some bugsa and added BEM classes on index-form partial replaced h2 and p forom index to partial, formated code

--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
         <!-- Halyna Prolubshchykova end -->
     
         <!-- Oleksandr Papazov -->
-        <div>
-            <h2>Make a reservation</h2>
-            <p>Please complete the form below</p>
-            <form action="" data-include="partials/index-form.html"><!-- Stasiuk U --></form>
-        </div>
+        <div data-include="partials/index-form.html"></div>
         
     </main>
     <footer data-include="partials/footer.html">
