--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How to get there Page:Cabin rental Template</title>
     <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
+    <link rel="stylesheet" href="css/contact.css">
 </head>
 
 <body>
