added ofer- main partial

--- a/offer.html
+++ b/offer.html
@@ -14,7 +14,7 @@
     <header data-include="partials/header.partial.html">
         <!-- Halyna Prolubshchykova end -->
     </header>
-    <main></main>
+    <main data-include="partials/offer-main.html"></main>
     <footer data-include="partials/footer.html"></footer>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
 </body>
