create files: about.season-activities.html and policisies.rental-policisies.html. And add new section with class'season-activities'

--- a/policies.html
+++ b/policies.html
@@ -16,6 +16,7 @@
     </header>
     <main>
         <!-- Svitto Marina start -->
+        <section data-include="partials/policies.rental-policisies.html"></section>
         <!-- Svitto Marina end -->
     </main>
     <footer data-include="partials/footer.html"></footer>
