--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
         <!-- Pivniuk Olha start -->
         <!-- Pivniuk Olha end -->
         <!-- Svitto Marina start -->
+        <section data-include="partials/about.season-activities.html"></section>
         <!-- Svitto Marina end -->
     </main>
     <footer data-include="partials/footer.html"></footer>
