--- a/policies.html
+++ b/policies.html
@@ -16,7 +16,7 @@
     </header>
     <main>
         <!-- Svitto Marina start -->
-        <section data-include="partials/policies.rental-policisies.html"></section>
+        <section data-include="partials/policies.rental-policisies.partial.html"></section>
         <!-- Svitto Marina end -->
     </main>
     <footer data-include="partials/footer.html"></footer>
