--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <section data-include="partials/index.answer-for-question.partial.html"></section>
         <!-- Oleksandr Papazov -->
         <div data-include="partials/index-form.html"></div>
+        <!--Iryna Pidgorodna-->
+        <section data-include="partials/our-facilities.partial.html"></section>
         
     </main>
     <footer data-include="partials/footer.html"></footer>
