--- a/gallery.html
+++ b/gallery.html
@@ -11,19 +11,12 @@
 </head>
 
 <body>
-    <header data-include="partials/header.partial.html">
-        <!-- Halyna Prolubshchykova start -->
-    </header>
+    <header data-include="partials/header.partial.html"></header>
     <main>
-        <section data-include="partials/gallery-main-seasons.partial.html">
-            <!-- Savinskyi -->
-        </section>
-        <section data-include="partials/gallery-main-our-guests.html">
-            <!-- Mykolyshyn -->
-        </section>
+        <section data-include="partials/gallery-main-seasons.partial.html"></section>
+        <section data-include="partials/gallery-main-our-guests.html"></section>
     </main>
     <footer data-include="partials/footer.html"></footer>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
 </body>
-
 </html>
