Added shortcut icon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
+    <link rel="shortcut icon" href="https://res2.weblium.site/res/5d011f0098f725002337e187/5d720164c917a00023adc8f7_optimized" type="image/x-icon">
     <link rel="stylesheet" href="css/index.css">
 </head>
 
