--- a/policies.html
+++ b/policies.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
+    <link rel="shortcut icon" href="img/shortcut-icon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/policies.css">
 </head>
 
