--- a/gallery.html
+++ b/gallery.html
@@ -18,5 +18,7 @@
     </main>
     <footer data-include="partials/footer.html"></footer>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
+    <script src="js/slider.js" defer></script>
+    
 </body>
 </html>
