gallery slider js

--- a/gallery.html
+++ b/gallery.html
@@ -8,17 +8,57 @@
     <title>Photos Page:Cabin rental Template</title>
     <link rel="shortcut icon" href="img/shortcut-icon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/gallery.css">
+
 </head>
 
 <body>
     <header data-include="partials/header.partial.html"></header>
     <main>
         <section data-include="partials/gallery-main-seasons.partial.html"></section>
-        <section data-include="partials/gallery-main-our-guests.html"></section>
+        <!-- <section data-include="partials/gallery-main-our-guests.html"></section> -->
+        <section class="gallery_carousel">
+            <h2 class="gallery_carousel-tags">Our guests </h2>
+            <div class="gallery_sl" data-slider="gallery_sl" data-loop="true" data-autoplay="false">
+                <div class="gallery_sl-wrapper">
+                    <div class="gallery_sl-items">
+                        <div class="gallery_sl-item">
+                            <img class="gallery_carousel-img" src="img/gallery-carousel/galery_carousel-1.jpeg"
+                                alt="Working">
+                        </div>
+                        <div class="gallery_sl-item">
+                            <img class="gallery_carousel-img" src="img/gallery-carousel/galery_carousel-2.jpeg"
+                                alt="Working">
+                        </div>
+                        <div class="gallery_sl-item">
+                            <img class="gallery_carousel-img" src="img/gallery-carousel/galery_carousel-3.jpeg"
+                                alt="Working">
+                        </div>
+                        <div class="gallery_sl-item">
+                            <img class="gallery_carousel-img" src="img/gallery-carousel/galery_carousel-4.jpeg"
+                                alt="Working">
+                        </div>
+                        <div class="gallery_sl-item">
+                            <img class="gallery_carousel-img" src="img/gallery-carousel/galery_carousel-6.jpeg"
+                                alt="Working">
+                        </div>
+                        <div class="gallery_sl-item">
+                            <img class="gallery_carousel-img" src="img/gallery-carousel/galery_carousel-7.jpeg"
+                                alt="Working">
+                        </div>
+                        <div class="gallery_sl-item">
+                            <img class="gallery_carousel-img" src="img/gallery-carousel/galery_carousel-1.jpeg"
+                                alt="Working">
+                        </div>
+                    </div>
+                </div>
+                <button class="gallery_sl-btn gallery_sl-btn-prev"></button>
+                <button class="gallery_sl-btn gallery_sl-btn-next"></button>
+            </div>
+        </section>
     </main>
     <footer data-include="partials/footer.html"></footer>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
     <script src="js/slider.js" defer></script>
-    
 </body>
+
 </html>
