--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
         <!-- Oleksandr Papazov -->
         <section data-include="partials/index.answer-for-question.partial.html"></section>
         <!-- Oleksandr Papazov -->
+        <!-- Bohuslav Stanishevskyy -->
+        <section data-include="partials/shop-and-cafe.partial.html"></section>
+        <section data-include="partials/testimonials.partial.html"></section>
+        <!-- Bohuslav Stanishevskyy -->
         <div data-include="partials/index-form.html"></div>
-        
-        
     </main>
     <footer data-include="partials/footer.html"></footer>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
