mark my partial

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         <section data-include="partials/shop-and-cafe.partial.html"></section>
         <section data-include="partials/testimonials.partial.html"></section>
         <!-- Bohuslav Stanishevskyy -->
+        <!-- Stasiuk Yuriy -->
         <div data-include="partials/index-form.html"></div>
+        <!-- Stasiuk Yuriy -->
     </main>
     <footer data-include="partials/footer.html"></footer>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
