--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photos Page:Cabin rental Template</title>
+    <title>Photos Page: Cabin Rentals</title>
     <link rel="shortcut icon" href="img/shortcut-icon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/gallery.css">
 
