added index.js to all pages

--- a/gallery.html
+++ b/gallery.html
@@ -59,6 +59,7 @@
     <footer data-include="partials/footer.html"></footer>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
     <script src="js/slider.js" defer></script>
+    <script src="js/index.js" defer></script>
 </body>
 
 </html>
