--- a/offer.html
+++ b/offer.html
@@ -16,6 +16,7 @@
     <main data-include="partials/offer-main.html"></main>
     <footer data-include="partials/footer.html"></footer>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
+    <script src="js/index.js" defer></script>
 </body>
 
 </html>
