--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
     </main>
     <footer data-include="partials/footer.html"></footer>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
+    <script src="js/index.js" defer></script>
 </body>
 
 </html>
