--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         <section>
             <!-- -->
         </section>
-        <section data-include="partials/contact-main-contact-us.html">
+        <section data-include="partials/contact-form.html">
             <!--mykolyshyn -->
         </section>
     </main>
