--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
     </header>
     <main>
         <!-- Pivniuk Olha start -->
+        <section data-include="partials/about.variety-of-cabins.partial.html"></section>
         <!-- Pivniuk Olha end -->
         <!-- Svitto Marina start -->
         <section data-include="partials/about.season-activities.partial.html"></section>
