--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,10 @@
             <!--mykolyshyn -->
         </section>
     </main>
+    
     <footer data-include="partials/footer.html"></footer>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/contact.js" defer></script>
 </body>
 
