--- a/policies.html
+++ b/policies.html
@@ -21,7 +21,7 @@
     </main>
     <footer data-include="partials/footer.html"></footer>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
-    <script src="js/index.js" defer></script>
+    <script src="js/policies.js" defer></script>
 </body>
 
 </html>
