--- a/about.html
+++ b/about.html
@@ -21,6 +21,10 @@
         <!-- Svitto Marina start -->
         <section data-include="partials/about.season-activities.partial.html"></section>
         <!-- Svitto Marina end -->
+        <!-- Pivniuk Olha start -->
+        <section data-include="partials/about.spa-vacations.html"></section>
+        <!-- Pivniuk Olha end -->
+
     </main>
     <footer data-include="partials/footer.html"></footer>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
