Added about.any-questions part

--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
         <!-- Svitto Marina end -->
         <!-- Pivniuk Olha start -->
         <section data-include="partials/about.spa-vacations.html"></section>
+        <section data-include="partials/about.any-questions.html"></section>        
         <!-- Pivniuk Olha end -->
 
     </main>
